resolved some alignment issues

--- a/style.css
+++ b/style.css
@@ -101,6 +101,9 @@ input {
     width: 100%;
 }
 
+.tweet-input {
+    margin-bottom: 40px;
+}
 .tweet-input input {
     padding: 5px;
     box-sizing: border-box;
